--- a/templates/register.html
+++ b/templates/register.html
@@ -34,20 +34,20 @@
                     <div class="card-body px-lg-5 pt-0">
                 
                         <!-- Form -->
-                        <form class="text-center" style="color: #757575;" action="#!">
+                        <form class="text-center" style="color: #757575;" method="POST" action="/register">
                 
                             <div class="form-row">
                                 <div class="col">
                                     <!-- First name -->
                                     <div class="md-form">
-                                        <input type="text" id="materialRegisterFormFirstName" class="form-control" required>
+                                        <input name="f_name" type="text" id="materialRegisterFormFirstName" class="form-control" required>
                                         <label for="materialRegisterFormFirstName">First name</label>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <!-- Last name -->
                                     <div class="md-form">
-                                        <input type="email" id="materialRegisterFormLastName" class="form-control" required>
+                                        <input name="l_name" type="text" id="materialRegisterFormLastName" class="form-control" required>
                                         <label for="materialRegisterFormLastName">Last name</label>
                                     </div>
                                 </div>
@@ -55,13 +55,13 @@
                 
                             <!-- E-mail -->
                             <div class="md-form mt-0">
-                                <input type="email" id="materialRegisterFormEmail" class="form-control" required>
+                                <input name="mail" type="email" id="materialRegisterFormEmail" class="form-control" required>
                                 <label for="materialRegisterFormEmail">E-mail</label>
                             </div>
                 
                             <!-- Password -->
                             <div class="md-form">
-                                <input type="password" id="materialRegisterFormPassword" class="form-control" aria-describedby="materialRegisterFormPasswordHelpBlock" required>
+                                <input name="passw" type="password" id="materialRegisterFormPassword" class="form-control" aria-describedby="materialRegisterFormPasswordHelpBlock" required>
                                 <label for="materialRegisterFormPassword">Password</label>
                                 <small id="materialRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
                                     At least 8 characters and 1 digit
