--- a/templates/verify_email.html
+++ b/templates/verify_email.html
@@ -30,7 +30,7 @@
             <div class='col-md-3'></div>
             <div class='col-md-6' style="margin-top: 100px;">
   <!-- Default form subscription -->
-<form class="text-center border border-light p-5" action="#" method="POST">
+<form class="text-center border border-light p-5" action="/email_verify" method="POST">
 
 
     <p class="h4 mb-4">Please Enter OTP for Verification</p>
