--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
                             <!--Card content-->
                             <div class="card-body px-lg-5 pt-0">
                               <!-- Form -->
-                              <form class="text-center" style="color: #757575;" action="#!">
+                              <form class="text-center" method="post" style="color: #757575;" >
                                 <br>
                                 <!-- Email -->
                                 <div class="md-form">
