Commit With Login Problem

--- a/templates/register.html
+++ b/templates/register.html
@@ -19,9 +19,7 @@
 <body>
     <header>
 
-        <div id="intro" class="view">
-            <div class="mask rgba-black-strong">
-            </div>
+        <div class="view">
             <div class='row'>
                 <div class='col-md-3'></div>
                 <div class='col-md-6'>
@@ -101,6 +99,9 @@
                 
                         </form>
                         <!-- Form -->
+                        <center style="color: crimson;">
+                        {{ msg }}
+                        </center>
                 
                     </div>
                 </div>
