--- a/templates/login.html
+++ b/templates/login.html
@@ -19,9 +19,8 @@
 <body>
     <header>
 
-        <div id="intro" class="view">
-            <div class="mask rgba-black-strong">
-            </div>
+        <div class="view">
+            
             <div class='row'  style='padding-top: 20px;'>
                 <div class='col-md-3'></div>
                 <div class='col-md-6'>
@@ -34,7 +33,7 @@
                             <!--Card content-->
                             <div class="card-body px-lg-5 pt-0">
                               <!-- Form -->
-                              <form class="text-center" style="color: #757575;" action="#!">
+                              <form class="text-center" action="/login" method="POST" style="color: #757575;" >
                                 <br>
                                 <!-- Email -->
                                 <div class="md-form">
@@ -65,6 +64,7 @@
                                 <!-- Sign in button -->
                                 <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" style="font-size: small;" type="submit">Log in</button>
                                 <br>
+                              </form>
                                 <!-- Register -->
                                 <p>Not a member?
                                   <a href="/register">Register</a>
@@ -79,7 +79,7 @@
                                 <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a> -->
 
                           
-                              </form>
+                              
                               <!-- Form -->
                           
                             </div>
