--- a/templates/login.html
+++ b/templates/login.html
@@ -33,17 +33,17 @@
                             <!--Card content-->
                             <div class="card-body px-lg-5 pt-0">
                               <!-- Form -->
-                              <form class="text-center"  method="POST" style="color: #757575;" >
+                              <form class="text-center" action="/login" method="POST" style="color: #757575;" >
                                 <br>
                                 <!-- Email -->
                                 <div class="md-form">
-                                  <input type="email" id="materialLoginFormEmail" class="form-control" required>
+                                  <input name="email" type="email" id="materialLoginFormEmail" class="form-control" required>
                                   <label for="materialLoginFormEmail">E-mail</label>
                                 </div>
                           
                                 <!-- Password -->
                                 <div class="md-form">
-                                  <input type="password" id="materialLoginFormPassword" class="form-control" required>
+                                  <input name="passw" type="password" id="materialLoginFormPassword" class="form-control" required>
                                   <label for="materialLoginFormPassword">Password</label>
                                 </div>
                                 <br>
