update logout etc

--- a/templates/Submit_Request.html
+++ b/templates/Submit_Request.html
@@ -37,23 +37,10 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto mr-0">
+                  
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="/about"> About</a>
-                  </li>
-                  <li class="nav-item active">
-                    <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="/request">
-                      Request <span class="sr-only">(current)</span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="/signup">Sign Up</a>
+                    <a class="nav-link" href="/logout">Log out</a>
                   </li>
                   
                 </ul>
@@ -79,7 +66,7 @@
       <div class="tm-form-container" >
         <h2 class="tm-text-secondary mb-4" style="padding-left: 500px;">Contact Us</h2>
         <form
-          action="contact.html"
+          action="/submit_req"
           method="POST"
           id="tm_contact_form"
           enctype="multipart/form-data">
