--- a/templates/about.html
+++ b/templates/about.html
@@ -46,7 +46,7 @@
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="/request">Request</a>
+                    <a class="nav-link" href="/login">login</a>
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
