--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="/request">Request</a>
+                    <a class="nav-link" href="/login">Login</a>
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
