--- a/templates/login.html
+++ b/templates/login.html
@@ -64,12 +64,13 @@
                                 <!-- Sign in button -->
                                 <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" style="font-size: small;" type="submit">Log in</button>
                                 <br>
+                                {{ msg }}
                               </form>
                                 <!-- Register -->
                                 <p>Not a member?
                                   <a href="/register">Register</a>
                                 </p>
-                          
+                                
                                 <!-- Social login -->
                                 <!-- <p>or sign in with:</p>
 
