--- a/templates/Submit_Request.html
+++ b/templates/Submit_Request.html
@@ -52,7 +52,7 @@
 
 
       <div class="tm-form-container" >
-        <h1 class="tm-text-secondary mb-4" style="padding-left: 450px;">Contact Us</h1>
+        <h1 class="tm-text-secondary mb-4" style="padding-left: 380px;">Submit Your Request</h1>
         <form
           action="/submit_req"
           method="POST"
@@ -117,7 +117,7 @@
               name="request_description"
               class="form-control rounded-0"
               placeholder="Request Description"
-              style="height:200px"
+              style="height:200px;max-height: 300px;min-width: 200px;"
               required=""></textarea>
           </div>
           </div></div>
