--- a/templates/login.html
+++ b/templates/login.html
@@ -69,7 +69,7 @@
                                 <p>Not a member?
                                   <a href="/register">Register</a>
                                 </p>
-                          
+                                <center><p style="color: crimson;"> {{ msg }}  </p></center>
                                 <!-- Social login -->
                                 <!-- <p>or sign in with:</p>
 
