--- a/templates/Submit_Request.html
+++ b/templates/Submit_Request.html
@@ -77,7 +77,7 @@
               name="contact_email"
               class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
               placeholder="Your Email"
-              required="" />
+              required />
           </div></div></div>
           <div class="form-group tm-choices-container tm-text-secondary" style="width: 800px;padding-left: 300px;">
             <label class="tm-w-50">
@@ -107,7 +107,7 @@
               name="request_title"
               class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
               placeholder="Request Title"
-              required="" />
+              required />
           </div></div>
           <div class="col-md-6">
           <div class="tm-mb-5" style="width: 800px;padding-left: 300px;">
@@ -118,7 +118,7 @@
               class="form-control rounded-0"
               placeholder="Request Description"
               style="height:200px;max-height: 300px;min-width: 200px;"
-              required=""></textarea>
+              required></textarea>
           </div>
           </div></div>
           <div style="padding-left: 300px;">
