--- a/templates/Submit_Request.html
+++ b/templates/Submit_Request.html
@@ -1,144 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Request</title>
+<head>
+	<title>Request</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="../static/send_request/images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../static/send_request/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../static/send_request/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../static/send_request/vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../static/send_request/vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../static/send_request/vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../static/send_request/css/util.css">
+	<link rel="stylesheet" type="text/css" href="../static/send_request/css/main.css">
+<!--===============================================================================================-->
+</head>
+<body>
+
+	<div class="contact1">
+		<div class="container-contact1">
+			<div class="contact1-pic js-tilt" data-tilt>
+				<img src="../static/send_request/images/img-01.png" alt="IMG">
+			</div>
+
+			<form class="contact1-form validate-form" action="/submit_req" method="POST">
+				<span class="contact1-form-title">
+					Make Your Request
+				</span>
+				
+				<div class="wrap-input1 validate-input" data-validate = "Name is required">
+					<input class="input1" type="text" name="name" placeholder="Full Name">
+					<span class="shadow-input1"></span>
+				</div>
+				<div class="wrap-input1" style="padding-left: 50px;" >
+					<input type="radio" name="gender" value="Male">  Male
+					<span class="shadow-input1"></span>
+				</div>
+				<div class="wrap-input1" style="padding-left: 50px;">
+				<input type="radio" name="gender" value="Female">  Female
+				<span class="shadow-input1"></span>
+			</div>
+				<div class="wrap-input1 validate-input" data-validate = "Title is required">
+					<input class="input1" type="text" name="request_title" placeholder="Request Title">
+					<span class="shadow-input1"></span>
+				</div>
+
+				<div class="wrap-input1 validate-input" data-validate = "Description is required">
+					<textarea class="input1" name="request_description" placeholder="Request Description"></textarea>
+					<span class="shadow-input1"></span>
+				</div>
+
+				<div class="container-contact1-form-btn">
+					<button class="contact1-form-btn">
+						<span>
+							Send Request
+							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						</span>
+					</button>
+					<a class="contact1-form-btn" href='/logout'>
+						<span>
+							Logout
+							<i aria-hidden="true"></i>
+						</span>
+					</a>
+				</div>
+			</form>
+		</div>
+	</div>
 
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
-    <link rel="stylesheet" href="../static/index_Files/css/all.min.css" />
-    <link rel="stylesheet" href="../static/index_Files/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../static/index_Files/css/templatemo-style.css" />
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row tm-brand-row">
-        <div class="col-lg-4 col-10">
-          <div class="tm-brand-container">
-            <div class="tm-brand-texts">
-              <h1 class="text-uppercase tm-brand-name">Prevent You</h1>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-8 col-2 tm-nav-col">
-          <div class="tm-nav">
-            <nav class="navbar navbar-expand-lg navbar-light tm-navbar">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto mr-0">
-                  
-                  <li class="nav-item">
-                    <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="/logout">Log out</a>
-                  </li>
-                  
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
 
 
-      <div class="tm-form-container" >
-        <h1 class="tm-text-secondary mb-4" style="padding-left: 380px;">Submit Your Request</h1>
-        <form
-          action="/submit_req"
-          method="POST"
-          id="tm_contact_form"
-          enctype="multipart/form-data">
-          <div class="row">
-            <div class="col-md-6">
-          <div class="form-group" style="width: 400px;">
-            <input
-              type="text"
-              id="contact_name"
-              name="name"
-              class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-              placeholder="Your Name"
-              required="" />
-          </div></div>
-          <div class="col-md-6">
-          <div class="form-group-2" style="width: 800px;padding-left: 300px;">
-            <input
-              type="email"
-              id="contact_email"
-              name="contact_email"
-              class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-              placeholder="Your Email"
-              required />
-          </div></div></div>
-          <div class="form-group tm-choices-container tm-text-secondary" style="width: 800px;padding-left: 300px;">
-            <label class="tm-w-50">
-              <input
-                type="radio"
-                class="with-gap"
-                name="gender"
-                value="male" />
-              <span>Male</span>
-            </label>
+<!--===============================================================================================-->
+	<script src="../static/send_request/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="../static/send_request/vendor/bootstrap/js/popper.js"></script>
+	<script src="../static/send_request/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="../static/send_request/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="../static/send_request/vendor/tilt/tilt.jquery.min.js"></script>
+	<script >
+		$('.js-tilt').tilt({
+			scale: 1.1
+		})
+	</script>
 
-            <label class="tm-w-50">
-              <input
-                type="radio"
-                class="with-gap"
-                name="gender"
-                value="female" />
-              <span>Female</span>
-            </label>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-          <div class="form-group-2" style="width: 400px;">
-            <input
-              type="text"
-              id="request_title"
-              name="request_title"
-              class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-              placeholder="Request Title"
-              required />
-          </div></div>
-          <div class="col-md-6">
-          <div class="tm-mb-5" style="width: 800px;padding-left: 300px;">
-            <textarea
-              rows="10"
-              id="contact_message"
-              name="request_description"
-              class="form-control rounded-0"
-              placeholder="Request Description"
-              style="height:200px;max-height: 300px;min-width: 200px;"
-              required></textarea>
-          </div>
-          </div></div>
-          <div style="padding-left: 300px;">
-            <button
-              type="submit"
-              class="btn btn-secondary tm-btn-submit rounded-0"
-              style="width: 400px;"
-              >
-              Submit
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <script src="../static/index_Files/js/jquery.min.js"></script>
-    <script src="../static/index_Files/js/parallax.min.js"></script>
-    <script src="../static/index_Files/js/imagesloaded.pkgd.min.js"></script>
-    <script src="../static/index_Files/js/isotope.pkgd.min.js"></script>
-    <script src="../static/index_Files/js/bootstrap.min.js"></script>
-    </script>
-  </body>
+  gtag('config', 'UA-23581568-13');
+</script>
+
+<!--===============================================================================================-->
+	<script src="../static/send_request/js/main.js"></script>
+
+</body>
 </html>
