--- a/templates/Submit_Request.html
+++ b/templates/Submit_Request.html
@@ -29,7 +29,7 @@
 				<img src="../static/send_request/images/img-01.png" alt="IMG">
 			</div>
 
-			<form class="contact1-form validate-form" action="/make_request" method="POST">
+			<form class="contact1-form validate-form" action="/submit_req" method="POST">
 				<span class="contact1-form-title">
 					Make Your Request
 				</span>
