Prevent You Box Work Done

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
         <div class="col-lg-4 col-10">
           <div class="tm-brand-container">
             <div class="tm-brand-texts">
-              <h1 class="text-uppercase tm-brand-name">Prevent You</h1>
+              <h1 class="text-uppercase" style="color: #98999a;padding-left: 30px;padding-top: 30px;">Prevent You</h1>
             </div>
           </div>
         </div>
