--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                         <div class="card" style=height:590px;>
         
                             <h5 class="card-header info-color white-text text-center py-3">
-                              <strong style='font-size: x-large;'>Log in</strong>
+                              <strong style='font-size: larger;'>Log in</strong>
                             </h5>
                           
                             <!--Card content-->
