--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
     <div class="container-fluid">
       <div class="row tm-brand-row">
         <div class="col-lg-4 col-10">
-          <div class="tm-brand-container">
+          <div>
             <div class="tm-brand-texts">
-              <h1 class="text-uppercase tm-brand-name">Prevent You</h1>
+              <h1 class="text-uppercase" style="color: #98999a;padding-left: 30px;padding-top: 30px;">Prevent You</h1>
             </div>
           </div>
         </div>
