--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../static/index_Files/css/all.min.css" />
     <link rel="stylesheet" href="../static/index_Files/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../static/index_Files/css/templatemo-style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="container-fluid">
@@ -74,6 +75,9 @@
                     Jaipur, Rajasthan
                   </p>
                 </address>
+                <h2 class="tm-text-secondary tm-mb-6"style="padding-top:20px;">Follow Us On</h2>
+                
+                <a href="#" target="_blank" style="margin-left: 20px;"><i class="fa fa-instagram" style="font-size:36px"></i></a>
               </div>
 
             </div>
@@ -100,7 +104,7 @@
 
       
     </div>
-
+    
     <script src="../static/index_Files/js/jquery.min.js"></script>
     <script src="../static/index_Files/js/parallax.min.js"></script>
     <script src="../static/index_Files/js/bootstrap.min.js"></script>
