updated otp problem

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Inner Engineering</title>
+    <title>Prevent You</title>
 
     <link rel="stylesheet"  href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="../static/index_Files/css/all.min.css" />
@@ -17,7 +17,7 @@
         <div class="col-lg-4 col-10">
           <div>
             <div class="tm-brand-texts">
-              <h1 class="text-uppercase" style="color: #98999a;padding-left: 30px;padding-top: 30px;">Prevent You</h1>
+              <h1 class="text-uppercase" style="color: #98999a;padding-left: 30px;padding-top: 30px;">𝓟𝓻𝓮𝓿𝓮𝓷𝓽 𝓨𝓸𝓾</h1>
             </div>
           </div>
         </div>
