--- a/templates/about.html
+++ b/templates/about.html
@@ -77,7 +77,7 @@
                 </address>
                 <h2 class="tm-text-secondary tm-mb-6"style="padding-top:20px;">Follow Us On</h2>
                 
-                <a href="#" target="_blank" style="margin-left: 20px;"><i class="fa fa-instagram" style="font-size:36px"></i></a>
+                <a href="https://www.instagram.com/preventyou/" target="_blank" style="margin-left: 20px;"><i class="fa fa-instagram" style="font-size:36px"></i></a>
               </div>
 
             </div>
